cabal-version:      2.4
name:               HelangHaskellImpl
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             kirraObj
maintainer:         c@skymc.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable HelangHaskellImpl
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules: SpeedTester.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    other-modules: SpeedTester
    build-depends:    base ^>=4.14.3.0, random
    hs-source-dirs:   app
    default-language: Haskell2010